syntax = "proto3";

package admin;

option go_package = "github.com/Jim3Things/CloudChamber/simulation/pkg/protos/admin";
option csharp_namespace = "CloudChamber.Protos.Admin";

// Rights contains the set of known action rights that a user holds.
message Rights {
    // can_manage_accounts indicates that this user can create, modify, or
    // delete user accounts - both others, and its own.
    bool can_manage_accounts = 1;

    // can_step_time indicates that this user can change the simulated time and
    // simulated time policy.
    bool can_step_time = 2;

    // can_modify_workloads indicates that this user can create, update, or
    // delete simulated workloads.
    bool can_modify_workloads = 3;

    // can_modify_inventory indicates that this user can add, modify, or remove
    // the definition views of simulated inventory.
    bool can_modify_inventory = 4;

    // can_inject_faults indicates that this user can inject forced faults
    // into the running simulation.
    bool can_inject_faults = 5;

    // can_perform_repairs indicates that this used can manually repair a fault
    // in the simulated inventory.
    bool can_perform_repairs = 6;
}

// User is a representation of an individual user
message User {
    // The username, held so as to preserve the original case
    string name = 1;

    bytes password_hash = 2;
    int64 user_id = 3;
    bool enabled = 4;

    // obsolete
    bool can_manage_accounts = 5;

    // True, if this user entry can never be deleted.
    bool never_delete = 6;

    // The rights this user has
    Rights rights = 7;
}

// Limited exposure of user attributes for use when returning information
// to a remote client.
message UserPublic {
    bool enabled = 1;

    // The rights this user has
    Rights rights = 2;

    // True, if this user entry can never be deleted.
    bool never_delete = 3;
}

// Public definition for a user, sent by a remote client to the Cloud Chamber
// controller when the user is created.
message UserDefinition {
    string password = 1;
    bool enabled = 2;

    // The rights this user has
    Rights rights = 3;
}

// Public definition for the fields for a user that can be mutated in an
// update operation
message UserUpdate {
    bool enabled = 2;

    // The rights this user has
    Rights rights = 3;
}

// Public definition for a request to set a new password for a user
message UserPassword {
    // The existing password, used to check that this is a legit request
    string old_password = 1;

    // The new password
    string new_password = 2;

    // An administrative flag to force the new password
    bool force = 3;
}

// User list response.
message UserList {

    // A single user entry
    message Entry {
        // Name of the user
        string name = 1;

        // Uri to use to access the user
        string uri = 2;

        // True, if the user is protected against changes
        bool protected = 3;
    }

    // List of known users
    repeated Entry users = 1;
}
